--- a/Myassistant/app/build.gradle
+++ b/Myassistant/app/build.gradle
@@ -28,4 +28,5 @@ dependencies {
     compile 'com.android.support:design:26.+'
     testCompile 'junit:junit:4.12'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
+    compile 'com.squareup.okhttp3:okhttp:3.4.1'
 }
