--- a/Myassistant/app/build.gradle
+++ b/Myassistant/app/build.gradle
@@ -29,4 +29,6 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.squareup.okhttp3:okhttp:3.4.1'
+    compile 'com.android.support:recyclerview-v7:26.+'
+    compile 'org.litepal.android:core:1.4.1'
 }
