--- a/Myassistant/app/src/main/AndroidManifest.xml
+++ b/Myassistant/app/src/main/AndroidManifest.xml
@@ -12,13 +12,15 @@
         <activity
             android:name=".logon"
             android:label="@string/app_name">
+
+        </activity>
+        <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".MainActivity"></activity>
         <activity android:name=".sign_up"></activity>
     </application>
 
