--- a/Myassistant/app/src/main/AndroidManifest.xml
+++ b/Myassistant/app/src/main/AndroidManifest.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.zucc.hpy31501365gbl31501364">
-    <uses-permission android:name="android.permission.INTERNET"/>
+
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -11,15 +13,22 @@
         android:theme="@style/AppTheme">
         <activity
             android:name=".logon"
-            android:label="@string/app_name">
+            android:label="@string/help">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".MainActivity"></activity>
-        <activity android:name=".sign_up"></activity>
+        <activity
+            android:name=".MainActivity"
+            android:label="@string/help">
+        </activity>
+        <activity
+            android:name=".sign_up"
+            android:label="@string/sign">
+        </activity>
+        <activity android:name=".AddEventActivity"></activity>
     </application>
 
 </manifest>
