--- a/Myassistant/app/src/main/AndroidManifest.xml
+++ b/Myassistant/app/src/main/AndroidManifest.xml
@@ -22,6 +22,8 @@
         <activity android:name=".AddEventActivity" />
         <activity android:name=".EditEventActivity" />
         <activity android:name=".SelectEventActivity" />
+        <activity android:name=".EditClockActivity" />
+        <activity android:name=".AddClockActivity"></activity>
     </application>
 
 </manifest>
