查询闹钟接口改动 收支管理主页
查询闹钟接口改动 收支管理主页

--- a/Myassistant/app/build.gradle
+++ b/Myassistant/app/build.gradle
@@ -31,5 +31,6 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:26.+'
     compile 'com.google.code.gson:gson:2.7'
     compile 'com.haibin:calendarview:3.0.6'
+    implementation 'com.github.PhilJay:MPAndroidChart:v3.0.3'
     testCompile 'junit:junit:4.12'
 }
