--- a/Myassistant/app/build.gradle
+++ b/Myassistant/app/build.gradle
@@ -31,6 +31,7 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:26.+'
     compile 'com.google.code.gson:gson:2.7'
     compile 'com.haibin:calendarview:3.0.6'
+    compile 'com.github.joaquimley:faboptions:1.2.0'
     implementation 'com.github.PhilJay:MPAndroidChart:v3.0.3'
     testCompile 'junit:junit:4.12'
 }
