--- a/Myassistant/app/build.gradle
+++ b/Myassistant/app/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 26
-    buildToolsVersion "27.0.0"
+    buildToolsVersion '27.0.3'
     defaultConfig {
         applicationId "com.zucc.hpy31501365gbl31501364"
         minSdkVersion 23
@@ -20,18 +20,18 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    androidTestImplementation('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    compile 'com.android.support:appcompat-v7:26.+'
-    compile 'com.android.support:design:26.+'
-    compile 'com.android.support.constraint:constraint-layout:1.0.2'
-    compile 'com.squareup.okhttp3:okhttp:3.4.1'
-    compile 'com.android.support:recyclerview-v7:26.+'
-    compile 'com.google.code.gson:gson:2.7'
-    compile 'com.haibin:calendarview:3.0.6'
-    compile 'com.github.joaquimley:faboptions:1.2.0'
+    implementation 'com.android.support:appcompat-v7:26.+'
+    implementation 'com.android.support:design:26.+'
+    implementation 'com.android.support.constraint:constraint-layout:1.0.2'
+    implementation 'com.squareup.okhttp3:okhttp:3.4.1'
+    implementation 'com.android.support:recyclerview-v7:26.+'
+    implementation 'com.google.code.gson:gson:2.7'
+    implementation 'com.haibin:calendarview:3.0.6'
+    implementation 'com.github.joaquimley:faboptions:1.2.0'
     implementation 'com.github.PhilJay:MPAndroidChart:v3.0.3'
-    testCompile 'junit:junit:4.12'
+    testImplementation 'junit:junit:4.12'
 }
