--- a/Myassistant/app/src/main/AndroidManifest.xml
+++ b/Myassistant/app/src/main/AndroidManifest.xml
@@ -3,10 +3,10 @@
     package="com.zucc.hpy31501365gbl31501364">
 
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW"/>
+    <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
 
     <application
-        android:name="com.zucc.hpy31501365gbl31501364.MyApplication"
+        android:name=".MyApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:roundIcon="@mipmap/ic_launcher_round"
@@ -26,7 +26,13 @@
         <activity android:name=".SelectEventActivity" />
         <activity android:name=".EditClockActivity" />
         <activity android:name=".AddClockActivity" />
-        <receiver android:name=".MyReceiver" android:process=":remote"/>
+
+        <receiver
+            android:name=".MyReceiver"
+            android:process=":remote" />
+
+        <activity android:name=".AddAccountActivity"></activity>
+        <activity android:name=".AccountGraphActivity"></activity>
     </application>
 
 </manifest>
