--- a/Myassistant/app/build.gradle
+++ b/Myassistant/app/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 26
-    buildToolsVersion "27.0.0"
+    buildToolsVersion '27.0.3'
     defaultConfig {
         applicationId "com.zucc.hpy31501365gbl31501364"
         minSdkVersion 23
