--- a/Myassistant/app/build.gradle
+++ b/Myassistant/app/build.gradle
@@ -33,5 +33,6 @@ dependencies {
     implementation 'com.haibin:calendarview:3.0.6'
     implementation 'com.github.joaquimley:faboptions:1.2.0'
     implementation 'com.github.PhilJay:MPAndroidChart:v3.0.3'
+    implementation 'com.github.Shashank02051997:FancyToast-Android:0.1.3'
     testImplementation 'junit:junit:4.12'
 }
